# torii

./: .gitignore  .gitlab-ci.yml  .pr-test  .toriignore  .toriignore.template  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  DEFENSIVE_PUBLICATION.md  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TESTING.md
.github/workflows/: release.yml
docs/: AUTO_TAGGING.md  FEATURE_FETCH_SPECIFIC_REMOTE.md  GUI_VISION.md
src/: archive.rs  auth.rs  bisect.rs  clean.rs  cli.rs  commit_scan.rs  config.rs  core.rs  core_extensions.rs  core_integrate.rs  core_tag.rs  describe.rs  duration.rs  error.rs  fileops.rs  graph.rs  grep.rs  hooks.rs  integrate.rs  issue.rs  main.rs  mirror.rs  notes.rs  patch.rs  pr.rs  remote.rs  scanner.rs  snapshot.rs  ssh.rs  submodule.rs  subtree.rs  tag.rs  toriignore.rs  updater.rs  url.rs  workspace.rs  worktree.rs
src/cloud/: mod.rs  whoami.rs
src/transport/: https.rs  mod.rs  ssh.rs
src/tui/: app.rs  events.rs  mod.rs  picker.rs  ui.rs
src/tui/views/: auth.rs  bisect.rs  branch.rs  commit.rs  config.rs  dashboard.rs  diff.rs  help.rs  history.rs  issue.rs  log.rs  mirror.rs  mod.rs  pr.rs  remote.rs  settings.rs  snapshot.rs  submodule.rs  sync.rs  tag.rs  workspace.rs  worktree.rs
src/versioning/: auto_tag.rs  conventional.rs  mod.rs  semver.rs
