[package]
name = "gitorii"
version = "0.1.8"
edition = "2021"
authors = ["Paski <paski@paski.dev>"]
description = "A human-first Git client with simplified commands, snapshots, multi-platform mirrors and built-in secret scanning"
license-file = "LICENSE"
repository = "https://gitlab.com/paskidev/torii"
homepage = "https://gitorii.com"
documentation = "https://gitlab.com/paskidev/torii/-/blob/main/README.md"
keywords = ["git", "vcs", "cli", "mirror", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[[bin]]
name = "torii"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Git operations
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific directories
dirs = "5.0"

[dev-dependencies]
tempfile = "3.12"
