[package]
name = "gitorii"
version = "0.6.1-dev"
edition = "2021"
authors = ["Paski <paski@paski.dev>"]
description = "A human-first Git client with simplified commands, snapshots, multi-platform mirrors and built-in secret scanning"
license-file = "LICENSE"
repository = "https://github.com/paskidev/gitorii"
homepage = "https://gitorii.com"
documentation = "https://github.com/paskidev/gitorii/blob/main/README.md"
keywords = ["git", "vcs", "cli", "mirror", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[[bin]]
name = "torii"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "=4.5", features = ["derive"] }

# Git operations — transports disabled, we provide custom reqwest+russh transports
git2 = { version = "0.19", default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific directories
dirs = "5.0"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Update notifier
update-informer = { version = "1.2", default-features = false, features = ["crates"] }

# SSH transport (pure Rust, no openssl/libssh2)
russh = "0.60"
tokio = { version = "1", features = ["rt", "io-util", "macros", "net", "sync"] }

# Regex for custom secret patterns in .toriignore
regex = "1.10"

# Pulled in transitively by git2 → libgit2-sys. Declared here only so the
# `static` feature can be opted into at the gitorii level.
libz-sys = { version = "1.1", default-features = false, features = ["libc"] }

[dev-dependencies]
tempfile = "3.12"

[features]
default = []
# Build a fully static binary: vendors and links zlib statically so no
# system libz is required at runtime. Combine with the musl target for a
# binary that runs on Alpine, scratch containers, and any glibc/musl mix.
#   cargo build --release --target x86_64-unknown-linux-musl --features static
static = ["libz-sys/static"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
