[package]
name = "gitorii"
version = "0.6.0"
edition = "2021"
authors = ["Paski <paski@paski.dev>"]
description = "A human-first Git client with simplified commands, snapshots, multi-platform mirrors and built-in secret scanning"
license-file = "LICENSE"
repository = "https://github.com/paskidev/gitorii"
homepage = "https://gitorii.com"
documentation = "https://github.com/paskidev/gitorii/blob/main/README.md"
keywords = ["git", "vcs", "cli", "mirror", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[[bin]]
name = "torii"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "=4.5", features = ["derive"] }

# Git operations — transports disabled, we provide custom reqwest+russh transports
git2 = { version = "0.19", default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific directories
dirs = "5.0"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Update notifier
update-informer = { version = "1.2", default-features = false, features = ["crates"] }

# SSH transport (pure Rust, no openssl/libssh2)
russh = "0.60"
tokio = { version = "1", features = ["rt", "io-util", "macros", "net", "sync"] }

# Regex for custom secret patterns in .toriignore
regex = "1.10"

[dev-dependencies]
tempfile = "3.12"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
